--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
 							<div class="main__submotto">
 								Anteelo is a leading strategic design firm that builds powerful digital solutions for startups and enterprises.
 							</div>
-							<a href="" class="main__link">
-								<span class="main__triangle triangle"></span>
+							<a href="" class="main__link _icon-arrow">
+								<!-- <span class="main__triangle triangle"></span> -->
 								Get in touch
 							</a>
 						</div>
@@ -70,8 +70,7 @@
 									<p class="servise__text">
 										There’s no secret sauce, no wizard behind the curtain. What makes Aerolab tick is an interdisciplinary team with a framework that fosters candid collaboration.
 									</p>
-									<a href="" class="servise__link">
-										<span class="servise__triangle triangle"></span>
+									<a href="" class="servise__link _icon-arrow">
 										More know About us
 									</a>
 								</div>
@@ -149,7 +148,7 @@
 								<p class="product__subtext">
 									Dvd printing is an important feature used by large and small DVD production houses to print information on DVDs.
 								</p>
-								<a href="" class="product__link">
+								<a href="" class="product__link _icon-arrow">
 									See Case Study
 								</a>
 							</div>
@@ -192,7 +191,7 @@
 								<p class="product__subtext">
 									It is those feelings that drive our love of astronomy and our desire to learn more and more about it. 
 								</p>
-								<a href="" class="product__link">
+								<a href="" class="product__link _icon-arrow">
 									See Case Study
 								</a>
 							</div>
@@ -235,7 +234,7 @@
 								<p class="product__subtext">
 									Dvd printing is an important feature used by large and small DVD production houses to print information on DVDs.
 								</p>
-								<a href="" class="product__link">
+								<a href="" class="product__link _icon-arrow">
 									See Case Study
 								</a>
 							</div>
@@ -256,7 +255,7 @@
 									<div class="card-deation__text">
 										A five-day workshop that will help you answer crucial business questions
 									</div>
-									<a href="" class="card-deation__link">Read More</a>
+									<a href="" class="card-deation__link _icon-arrow">Read More</a>
 								</div>
 							</div>
 							<div class="deation__column">
@@ -267,7 +266,7 @@
 									<div class="card-deation__text">
 										A workshop aimed at shaping your business idea, answering questions regarding project planning
 									</div>
-									<a href="" class="card-deation__link">Read More</a>
+									<a href="" class="card-deation__link _icon-arrow">Read More</a>
 								</div>
 							</div>
 							<div class="deation__column">
@@ -278,7 +277,7 @@
 									<div class="card-deation__text">
 										An evaluation which will help you radically improve your product.
 									</div>
-									<a href="" class="card-deation__link">Read More</a>
+									<a href="" class="card-deation__link _icon-arrow">Read More</a>
 								</div>
 							</div>
 							<div class="deation__column">
@@ -289,10 +288,18 @@
 									<div class="card-deation__text">
 										Do you know what one of the key secrets of success is what makes people successful in business
 									</div>
-									<a href="" class="card-deation__link">Read More</a>
+									<a href="" class="card-deation__link _icon-arrow">Read More</a>
 								</div>
 							</div>
 						</div>
+					</div>
+				</section>
+				<section class="call">
+					<div class="call__content">
+						<h2 class="call__title">
+							Let’s make something amazing together.
+						</h2>
+						<a href="" class="call__link _icon-arrow">LET'S GET STARTED</a>
 					</div>
 				</section>
 			</main>
