--- a/src/modules/_footer.html
+++ b/src/modules/_footer.html
@@ -1,5 +1,91 @@
 <footer class="footer">
 	<div class="footer__content _container">
-
+		<div class="footer__top">
+			<div class="footer__item-top">
+				<div class="footer__descr">
+					Phone
+				</div>
+				<a href="tel:3250312832" class="footer__phone">+32 50 31 28 32</a>
+			</div>
+			<div class="footer__item-top">
+				<div class="footer__descr">
+					Address
+				</div>
+				<div class="footer__address">
+					491 Merlin Crest Suite 963
+				</div>
+			</div>
+		</div>
+		<div class="footer__bottom">
+			<div class="footer__wrapper">
+				<div class="footer__column-big">
+					<div class="footer__inner">
+						<div class="footer__card">
+							<h3 class="footer__title">
+								Services
+							</h3>
+							<ul class="footer__list">
+								<li class="footer__item"><a href="" class="footer__link descr">Strategy Design</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Product Design</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Content Strategy</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Brand Strategy</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Development</a></li>
+							</ul>
+						</div>
+						<div class="footer__card">
+							<h3 class="footer__title">
+								Help And Advice
+							</h3>
+							<ul class="footer__list">
+								<li class="footer__item"><a href="" class="footer__link descr">How it works</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Contact Support</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Privacy Policy</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">FAQ</a></li>
+							</ul>
+						</div>
+						<div class="footer__card">
+							<h3 class="footer__title">
+								Services
+							</h3>
+							<ul class="footer__list">
+								<li class="footer__item"><a href="" class="footer__link descr">About</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Blog</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Contact</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Brand Strategy</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Jobs</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="footer__column-middle">
+					<div class="footer__info">
+						<h3 class="footer__title">
+							Get in Touch
+						</h3>
+						<div class="footer__text">
+							Feel free to get in touch with us vai email
+						</div>
+						<a href="" class="footer__email">info.webovio@gmail.com</a>
+						<ul class="footer__cocial cocial-footer">
+							<li class="cocial-footer__item"><a href="" class="cocial-footer__link _icon-facebook"></a></li>
+							<li class="cocial-footer__item"><a href="" class="cocial-footer__link _icon-twitter"></a></li>
+							<li class="cocial-footer__item"><a href="" class="cocial-footer__link _icon-google"></a></li>
+							<li class="cocial-footer__item"><a href="" class="cocial-footer__link _icon-instagram"></a></li>	
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer__sub-bottom">
+			<div class="footer__logo">
+				<img src="img/main/logo.png" alt="">
+			</div>
+			<div class="footer__author">
+				© 2020@webovio. All Rights Reserved.
+			</div>
+		</div>
+	</div>
+	<div class="footer__bg">
+		<img src="img" alt="">
 	</div>
 </footer>
