--- a/webovio/index.html
+++ b/webovio/index.html
@@ -54,8 +54,8 @@
 							<div class="main__submotto">
 								Anteelo is a leading strategic design firm that builds powerful digital solutions for startups and enterprises.
 							</div>
-							<a href="" class="main__link">
-								<span class="main__triangle triangle"></span>
+							<a href="" class="main__link _icon-arrow">
+								<!-- <span class="main__triangle triangle"></span> -->
 								Get in touch
 							</a>
 						</div>
@@ -107,8 +107,7 @@
 									<p class="servise__text">
 										There’s no secret sauce, no wizard behind the curtain. What makes Aerolab tick is an interdisciplinary team with a framework that fosters candid collaboration.
 									</p>
-									<a href="" class="servise__link">
-										<span class="servise__triangle triangle"></span>
+									<a href="" class="servise__link _icon-arrow">
 										More know About us
 									</a>
 								</div>
@@ -186,7 +185,7 @@
 								<p class="product__subtext">
 									Dvd printing is an important feature used by large and small DVD production houses to print information on DVDs.
 								</p>
-								<a href="" class="product__link">
+								<a href="" class="product__link _icon-arrow">
 									See Case Study
 								</a>
 							</div>
@@ -229,7 +228,7 @@
 								<p class="product__subtext">
 									It is those feelings that drive our love of astronomy and our desire to learn more and more about it. 
 								</p>
-								<a href="" class="product__link">
+								<a href="" class="product__link _icon-arrow">
 									See Case Study
 								</a>
 							</div>
@@ -272,7 +271,7 @@
 								<p class="product__subtext">
 									Dvd printing is an important feature used by large and small DVD production houses to print information on DVDs.
 								</p>
-								<a href="" class="product__link">
+								<a href="" class="product__link _icon-arrow">
 									See Case Study
 								</a>
 							</div>
@@ -293,7 +292,7 @@
 									<div class="card-deation__text">
 										A five-day workshop that will help you answer crucial business questions
 									</div>
-									<a href="" class="card-deation__link">Read More</a>
+									<a href="" class="card-deation__link _icon-arrow">Read More</a>
 								</div>
 							</div>
 							<div class="deation__column">
@@ -304,7 +303,7 @@
 									<div class="card-deation__text">
 										A workshop aimed at shaping your business idea, answering questions regarding project planning
 									</div>
-									<a href="" class="card-deation__link">Read More</a>
+									<a href="" class="card-deation__link _icon-arrow">Read More</a>
 								</div>
 							</div>
 							<div class="deation__column">
@@ -315,7 +314,7 @@
 									<div class="card-deation__text">
 										An evaluation which will help you radically improve your product.
 									</div>
-									<a href="" class="card-deation__link">Read More</a>
+									<a href="" class="card-deation__link _icon-arrow">Read More</a>
 								</div>
 							</div>
 							<div class="deation__column">
@@ -326,16 +325,110 @@
 									<div class="card-deation__text">
 										Do you know what one of the key secrets of success is what makes people successful in business
 									</div>
-									<a href="" class="card-deation__link">Read More</a>
+									<a href="" class="card-deation__link _icon-arrow">Read More</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</section>
+				<section class="call">
+					<div class="call__content">
+						<h2 class="call__title">
+							Let’s make something amazing together.
+						</h2>
+						<a href="" class="call__link _icon-arrow">LET'S GET STARTED</a>
+					</div>
+				</section>
 			</main>
 			<footer class="footer">
 	<div class="footer__content _container">
-
+		<div class="footer__top">
+			<div class="footer__item-top">
+				<div class="footer__descr">
+					Phone
+				</div>
+				<a href="tel:3250312832" class="footer__phone">+32 50 31 28 32</a>
+			</div>
+			<div class="footer__item-top">
+				<div class="footer__descr">
+					Address
+				</div>
+				<div class="footer__address">
+					491 Merlin Crest Suite 963
+				</div>
+			</div>
+		</div>
+		<div class="footer__bottom">
+			<div class="footer__wrapper">
+				<div class="footer__column-big">
+					<div class="footer__inner">
+						<div class="footer__card">
+							<h3 class="footer__title">
+								Services
+							</h3>
+							<ul class="footer__list">
+								<li class="footer__item"><a href="" class="footer__link descr">Strategy Design</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Product Design</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Content Strategy</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Brand Strategy</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Development</a></li>
+							</ul>
+						</div>
+						<div class="footer__card">
+							<h3 class="footer__title">
+								Help And Advice
+							</h3>
+							<ul class="footer__list">
+								<li class="footer__item"><a href="" class="footer__link descr">How it works</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Contact Support</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Privacy Policy</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">FAQ</a></li>
+							</ul>
+						</div>
+						<div class="footer__card">
+							<h3 class="footer__title">
+								Services
+							</h3>
+							<ul class="footer__list">
+								<li class="footer__item"><a href="" class="footer__link descr">About</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Blog</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Contact</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Brand Strategy</a></li>
+								<li class="footer__item"><a href="" class="footer__link descr">Jobs</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="footer__column-middle">
+					<div class="footer__info">
+						<h3 class="footer__title">
+							Get in Touch
+						</h3>
+						<div class="footer__text">
+							Feel free to get in touch with us vai email
+						</div>
+						<a href="" class="footer__email">info.webovio@gmail.com</a>
+						<ul class="footer__cocial cocial-footer">
+							<li class="cocial-footer__item"><a href="" class="cocial-footer__link _icon-facebook"></a></li>
+							<li class="cocial-footer__item"><a href="" class="cocial-footer__link _icon-twitter"></a></li>
+							<li class="cocial-footer__item"><a href="" class="cocial-footer__link _icon-google"></a></li>
+							<li class="cocial-footer__item"><a href="" class="cocial-footer__link _icon-instagram"></a></li>	
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer__sub-bottom">
+			<div class="footer__logo">
+				<img src="img/main/logo.png" alt="">
+			</div>
+			<div class="footer__author">
+				© 2020@webovio. All Rights Reserved.
+			</div>
+		</div>
+	</div>
+	<div class="footer__bg">
+		<img src="img" alt="">
 	</div>
 </footer>
 		</div>
