create new hamburger

--- a/src/modules/_header.html
+++ b/src/modules/_header.html
@@ -4,14 +4,11 @@
 			<a href="" class="header__logo">
 				<img src="img/header/logo.svg" alt="">
 			</a>
-			<a href="" class="header__name">
-				<img src="img/header/name.svg" alt="">
-			</a>
 		</div>
-		<div class="header__menu">
-			<div class="header__burger">
-				<div class="header__toggle"></div>
-			</div>	
+		<!-- <div class="header__burger">
+			<div class="header__toggle"></div>
+		</div> -->
+		<div class="header__menu">	
 			<nav class="header__nav">
 				<ul class="header__list">
 					<li class="header__item hidden"><a href="" class="header__link">Home</a></li>
@@ -22,6 +19,11 @@
 					<li class="header__item hidden"><a href="" class="header__link">contacts</a></li>
 				</ul>
 			</nav>
+		</div>
+		<div class="header__burger burger">
+			<span class="burger__item-top"></span>
+			<span class="burger__item-middle"></span>
+			<span class="burger__item-bottom"></span>
 		</div>	
 	</div>
 </header>
